@@ -1,53 +1,0 @@
-(***********************************************************************)
-(*                                                                     *)
-(*                           Objective Caml                            *)
-(*                                                                     *)
-(*               Jacques Garrigue, Kyoto University RIMS               *)
-(*                                                                     *)
-(*  Copyright 2001 Institut National de Recherche en Informatique et   *)
-(*  en Automatique.  All rights reserved.  This file is distributed    *)
-(*  under the terms of the GNU Library General Public License, with    *)
-(*  the special exception on linking described in file ../LICENSE.     *)
-(*                                                                     *)
-(***********************************************************************)
-
-(*
-  Modified by David Teller to extract relevant parts
-*)
-
-
-(**
-   @documents Set
-*)
-  module type OrderedType = Set.OrderedType
-  module type S =
-    sig
-      type elt
-      and t
-      val empty : t
-      val is_empty : t -> bool
-      val mem : elt -> t -> bool
-      val add : elt -> t -> t
-      val singleton : elt -> t
-      val remove : elt -> t -> t
-      val union : t -> t -> t
-      val inter : t -> t -> t
-      val diff : t -> t -> t
-      val compare : t -> t -> int
-      val equal : t -> t -> bool
-      val subset : t -> t -> bool
-      val iter : f:(elt -> unit) -> t -> unit
-      val fold : f:(elt -> 'a -> 'a) -> t -> init:'a -> 'a
-      val for_all : f:(elt -> bool) -> t -> bool
-      val exists : f:(elt -> bool) -> t -> bool
-      val filter : f:(elt -> bool) -> t -> t
-      val partition : f:(elt -> bool) -> t -> t * t
-      val cardinal : t -> int
-      val elements : t -> elt list
-      val min_elt : t -> elt
-      val max_elt : t -> elt
-      val choose : t -> elt
-      val split: elt -> t -> t * bool * t
-    end
-  module Make : functor (Ord : OrderedType) -> S with type elt = Ord.t
-
