@@ -1,5 +1,7 @@
 2008-11-16  David Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/extlib/extSet.mli: [Labels], [ExceptionLess] added
+
 	* src/core/extlib/extArray.ml*: [Cap.Labels] added
 
 2008-11-15  David Teller  <David.Teller@univ-orleans.fr>
